--- a/css/styles.css
+++ b/css/styles.css
@@ -881,6 +881,7 @@ form{
 /*Testimonials Section */
 .testimonial{
     padding: 61px 72px 57px 81px;
+    margin-bottom: 60px;
 }
 
 .testimonial .header p{
@@ -1176,6 +1177,10 @@ footer ul li a{
 
     .card-col:first-of-type{
         margin-bottom: 20px;
+    }
+
+    .testimonial{
+        margin-bottom: 0;
     }
 
     .test-clients .client-image img{
